# ChangeLog for games-util/playonlinux
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Jun 2008; Mounir Lamouri (Volkmar) <mounir.lamouri@gmail.com>
  -playonlinux-3.0.1.ebuild, +playonlinux-3.0.2.ebuild:
  New ebuild for bug 213287

  06 Jun 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  playonlinux-3.0.1.ebuild:
  Drop some unneeded lines and remove LICENSE from dodoc

  01 Jun 2008; Mounir Lamouri (Volkmar) <mounir.lamouri@gmail.com>
  +playonlinux-3.0.1.ebuild, +metadata.xml:
  New ebuild for bug 213287.
