@@ -1,4 +1,4 @@
 DIST PlayOnLinux_3.0.2.tar.gz 800637 RMD160 4f3c388dc21dd0c03d8c28524bb145cd5ec6ba33 SHA1 98b304436ad3bbb56a04f6c815c5c8f790859318 SHA256 aca92210b294204d7a856fbbbbb4ecbb69c1c18e87108b7494a0161fadfbefc1
-EBUILD playonlinux-3.0.2.ebuild 2327 RMD160 be9ce848de5a364c91548665d8ef73fce6df558b SHA1 406c903fff5075def6d8d0417280c237806195a9 SHA256 094f88470676bdc561828ce21d2b324a179193a6875e0bcea7f77b0a331c065e
-MISC ChangeLog 561 RMD160 a7b5cb200ecb52465d45e0e8041edf1722a33e01 SHA1 96b3550e7353c347d3e6828b57f5d426131ca26e SHA256 251ef2a179922e15d5b7767074e03c0b2355b9c970abe8875707c9747cc068bc
+EBUILD playonlinux-3.0.2.ebuild 2286 RMD160 848c7ae7777b36e53e047321aa20e781ed2daa4d SHA1 ceb0b7416c77d80026c40a549fea6772e004460f SHA256 54b77ea42c1cd6e32d953d305046d63cd2593d31c9ca55b816db6c3ebbc01c0f
+MISC ChangeLog 780 RMD160 f4f7556ca74e85c5dda798602b4d28df56466d08 SHA1 87dd71a3b1f17c649ca98f2d6357abe63e090a3d SHA256 4ca3543852d650eebfc0964f237f4fd08711fe53a71c7476e88cc18f991cc61f
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
