@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Jun 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
+  playonlinux-3.0.2.ebuild:
+  remove unnecessary quoting in assign statement; whitespace; remove explicit
+  dependencies that come from wxpython:2.8
+
   11 Jun 2008; Mounir Lamouri (Volkmar) <mounir.lamouri@gmail.com>
   -playonlinux-3.0.1.ebuild, +playonlinux-3.0.2.ebuild:
   New ebuild for bug 213287
